Committing collision and levels
First level mapped and enemies on screen, no assets but who gives a
fuck. Takes three hits per enemy.

--- a/AIE Template.vcxproj
+++ b/AIE Template.vcxproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Car.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="source\main.cpp" />
   </ItemGroup>
