--- a/AIE Template.vcxproj
+++ b/AIE Template.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="StateManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
