--- a/AIE Template.vcxproj
+++ b/AIE Template.vcxproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="Car.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Enemy.h" />
