--- a/AIE Template.vcxproj.filters
+++ b/AIE Template.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="Enemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
