Relocating enemy checks
Optimized and relocated the enemies check function into the enemy class

--- a/AIE Template.vcxproj
+++ b/AIE Template.vcxproj
@@ -91,6 +91,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Button.cpp" />
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Enemy.cpp" />
